# taskmind

./: .gitignore  README.md  install.sh  pyproject.toml  requirements.txt  setup.py
.kiro/: knowledge.md
configs/: config.default.yaml  integrations.example.yaml  projects.example.yaml
docs/: index.html  robots.txt  sitemap.xml
taskmind/: __init__.py  __main__.py  cli.py  config.py  daemon.py  database.py  platform.py
taskmind/capture/: audio_recorder.py  browser_url.py  git_watcher.py  idle_detector.py  window_tracker.py
taskmind/processing/: classifier.py  export.py  recap.py  timesheet.py  transcriber.py
taskmind/ui/: tray.py
taskmind/ui/dashboard/: app.py
taskmind/ui/dashboard/templates/: index.html
taskmind/utils/: notifications.py  scheduler.py
tests/: test_core.py
