[project]
name = "taskmind"
version = "0.1.2"
description = "Lightweight activity tracker and automatic timesheet generator for Linux"
requires-python = ">=3.6"
dependencies = [
    "PyYAML>=5.1",
    "click>=7.0",
    "pystray>=0.19",
    "Pillow>=6.0",
    "apscheduler>=3.6",
]

[project.scripts]
taskmind = "taskmind.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
